mise a jour des fichiers map et css

--- a/map.html
+++ b/map.html
@@ -1,6 +1,10 @@
 <html>
   <head>
+    <script src="https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.js"></script>
+    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+    <script src="js/manip.js"></script>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+    <link href='https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.css' rel='stylesheet' />
     <link rel="stylesheet" href="css/main.css"/>
   </head>
   <body>
@@ -10,7 +14,6 @@
       <div id = "map"></div>
     </content>
     <footer>
-      <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
     </footer>
   </body>
 </html>
