--- a/map.html
+++ b/map.html
@@ -1,19 +1,20 @@
 <html>
-  <head>
-    <script src="https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.js"></script>
-    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-    <script src="js/manip.js"></script>
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-    <link href='https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.css' rel='stylesheet' />
-    <link rel="stylesheet" href="css/main.css"/>
-  </head>
-  <body>
-    <header>
-    </header>
-    <content>
-      <div id = "map"></div>
-    </content>
-    <footer>
-    </footer>
-  </body>
+	<head>
+		<link rel="stylesheet" href="mycss.css" type="text/css" />
+		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+    	<link href='https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.css' rel='stylesheet' />
+		<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+		<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script src="https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.js"></script>
+    		<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+		<script src="manip.js"></script>
+		<script type="text/javascript" src="myjs.js"></script>
+	</head>
+	<body>
+		<div id="content">
+			<div id="menu"></div>
+			<div id="map">	</div>
+			<div id="chat"></div>
+		</div>
+	</body>
 </html>
